ai feature done

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://dhruv:123456dhruv@cluster0.hd8tfqc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 RESEND_API_KEY=re_f1ajXLCp_CE8nY3it6Gb67rghv6DDKZpAcmd
 NEXT_AUTH_SECRET_KEY=dhruvandcode
+OPENAI_API_KEY=1234
